Implement experiment 3 sprint 2 workflows